--- a/Momento/View/Base.lproj/Main.storyboard
+++ b/Momento/View/Base.lproj/Main.storyboard
@@ -76,12 +76,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="overlay" translatesAutoresizingMaskIntoConstraints="NO" id="g8Y-YV-jgx">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="g8Y-YV-jgx" secondAttribute="height" multiplier="125:206" id="2Sf-N8-1h2"/>
-                                </constraints>
-                            </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MomentoLogo" translatesAutoresizingMaskIntoConstraints="NO" id="v8u-nS-1fN">
                                 <rect key="frame" x="52" y="84.5" width="271" height="214"/>
                                 <constraints>
@@ -100,14 +94,14 @@
                                 <color key="textColor" red="0.95686274510000002" green="0.95686274510000002" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Signup to create profile" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Hr-dQ-dhm">
-                                <rect key="frame" x="108" y="374" width="158" height="18"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Login to view profile!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Hr-dQ-dhm">
+                                <rect key="frame" x="108" y="357" width="158" height="18"/>
                                 <fontDescription key="fontDescription" type="system" weight="ultraLight" pointSize="15"/>
                                 <color key="textColor" red="1" green="0.78823529411764703" blue="0.33333333333333331" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hWX-Im-euL">
-                                <rect key="frame" x="52" y="420" width="271" height="30"/>
+                                <rect key="frame" x="52" y="394" width="271" height="30"/>
                                 <color key="backgroundColor" red="0.11764705882352941" green="0.11764705882352941" blue="0.11764705882352941" alpha="1" colorSpace="calibratedRGB"/>
                                 <color key="textColor" red="0.95686274510000002" green="0.95686274510000002" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -118,12 +112,39 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mDl-xs-7us">
-                                <rect key="frame" x="110" y="542" width="155" height="57"/>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="y5p-Xf-moL">
+                                <rect key="frame" x="52" y="451" width="271" height="30"/>
+                                <color key="backgroundColor" red="0.11764705882352941" green="0.11764705882352941" blue="0.11764705882352941" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="textColor" red="0.95686274510000002" green="0.95686274510000002" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="_placeholderLabel.textColor">
+                                        <color key="value" red="1" green="0.78823529410000004" blue="0.33333333329999998" alpha="1" colorSpace="calibratedRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="a48-Qz-ctf">
+                                <rect key="frame" x="143" y="489" width="89" height="34"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="89" id="Skp-68-i2i"/>
+                                    <constraint firstAttribute="height" constant="34" id="lxo-em-IBp"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                <state key="normal" title="Or Sign Up">
+                                    <color key="titleColor" red="1" green="0.78823529410000004" blue="0.33333333329999998" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mDl-xs-7us">
+                                <rect key="frame" x="110" y="541" width="155" height="57"/>
                                 <color key="backgroundColor" red="0.98039215686274506" green="0.63529411764705879" blue="0.11764705882352941" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="57" id="6Au-L0-ren"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="155" id="GBC-v3-7ZV"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
                                 <size key="titleShadowOffset" width="5" height="0.0"/>
-                                <state key="normal" title="Sign Up">
+                                <state key="normal" title="Log In">
                                     <color key="titleColor" red="0.1176470588" green="0.1176470588" blue="0.1176470588" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                                 <userDefinedRuntimeAttributes>
@@ -135,45 +156,32 @@
                                     <action selector="signupBtn:" destination="hC3-Gt-Y54" eventType="touchUpInside" id="juX-s4-OcR"/>
                                 </connections>
                             </button>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="y5p-Xf-moL">
-                                <rect key="frame" x="52" y="477" width="271" height="30"/>
-                                <color key="backgroundColor" red="0.11764705882352941" green="0.11764705882352941" blue="0.11764705882352941" alpha="1" colorSpace="calibratedRGB"/>
-                                <color key="textColor" red="0.95686274510000002" green="0.95686274510000002" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="color" keyPath="_placeholderLabel.textColor">
-                                        <color key="value" red="1" green="0.78823529410000004" blue="0.33333333329999998" alpha="1" colorSpace="calibratedRGB"/>
-                                    </userDefinedRuntimeAttribute>
-                                </userDefinedRuntimeAttributes>
-                            </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="nXZ-K5-OgL" firstAttribute="leading" secondItem="44d-T0-16h" secondAttribute="leading" constant="106" id="0xB-Sm-qlF"/>
                             <constraint firstItem="44d-T0-16h" firstAttribute="trailing" secondItem="9bV-ms-1RX" secondAttribute="trailing" constant="110" id="14k-U0-3ij"/>
-                            <constraint firstItem="mDl-xs-7us" firstAttribute="leading" secondItem="44d-T0-16h" secondAttribute="leading" constant="110" id="42d-bq-5fa"/>
-                            <constraint firstItem="0Hr-dQ-dhm" firstAttribute="top" secondItem="nXZ-K5-OgL" secondAttribute="bottom" constant="24.5" id="6by-pY-Hlz"/>
+                            <constraint firstItem="0Hr-dQ-dhm" firstAttribute="top" secondItem="nXZ-K5-OgL" secondAttribute="bottom" constant="7.5" id="6by-pY-Hlz"/>
+                            <constraint firstItem="a48-Qz-ctf" firstAttribute="leading" secondItem="44d-T0-16h" secondAttribute="leading" constant="143" id="89y-0w-TNs"/>
                             <constraint firstItem="nXZ-K5-OgL" firstAttribute="top" secondItem="v8u-nS-1fN" secondAttribute="bottom" constant="8" id="9J2-dG-gEt"/>
                             <constraint firstItem="44d-T0-16h" firstAttribute="trailing" secondItem="nXZ-K5-OgL" secondAttribute="trailing" constant="107" id="9VM-bc-Cdv"/>
-                            <constraint firstItem="g8Y-YV-jgx" firstAttribute="bottom" secondItem="44d-T0-16h" secondAttribute="bottom" id="CwJ-uP-qaQ"/>
+                            <constraint firstItem="a48-Qz-ctf" firstAttribute="top" secondItem="y5p-Xf-moL" secondAttribute="bottom" constant="8" id="DpO-j5-c2I"/>
+                            <constraint firstItem="44d-T0-16h" firstAttribute="trailing" secondItem="mDl-xs-7us" secondAttribute="trailing" constant="110" id="F3X-Ai-QdS"/>
                             <constraint firstItem="44d-T0-16h" firstAttribute="trailing" secondItem="y5p-Xf-moL" secondAttribute="trailing" constant="52" id="FuN-fv-jMC"/>
                             <constraint firstItem="9bV-ms-1RX" firstAttribute="leading" secondItem="44d-T0-16h" secondAttribute="leading" constant="110" id="GgS-TP-OJm"/>
-                            <constraint firstItem="g8Y-YV-jgx" firstAttribute="top" secondItem="R3o-ve-3gp" secondAttribute="top" id="Q6U-iV-ELn"/>
                             <constraint firstItem="y5p-Xf-moL" firstAttribute="leading" secondItem="44d-T0-16h" secondAttribute="leading" constant="52" id="XOM-rE-mxe"/>
-                            <constraint firstItem="mDl-xs-7us" firstAttribute="top" secondItem="y5p-Xf-moL" secondAttribute="bottom" constant="35" id="b6w-dm-3n1"/>
+                            <constraint firstItem="44d-T0-16h" firstAttribute="trailing" secondItem="a48-Qz-ctf" secondAttribute="trailing" constant="143" id="XYq-LQ-Qry"/>
                             <constraint firstItem="0Hr-dQ-dhm" firstAttribute="leading" secondItem="44d-T0-16h" secondAttribute="leading" constant="108" id="cSh-cX-nbd"/>
                             <constraint firstItem="v8u-nS-1fN" firstAttribute="top" secondItem="9bV-ms-1RX" secondAttribute="bottom" constant="8" id="cy9-Ik-Q8D"/>
                             <constraint firstItem="v8u-nS-1fN" firstAttribute="leading" secondItem="44d-T0-16h" secondAttribute="leading" constant="52" id="dU8-ZP-sKd"/>
-                            <constraint firstItem="g8Y-YV-jgx" firstAttribute="trailing" secondItem="44d-T0-16h" secondAttribute="trailing" id="fen-tj-VFE"/>
+                            <constraint firstItem="mDl-xs-7us" firstAttribute="leading" secondItem="44d-T0-16h" secondAttribute="leading" constant="110" id="g2h-ay-S4k"/>
+                            <constraint firstItem="mDl-xs-7us" firstAttribute="top" secondItem="a48-Qz-ctf" secondAttribute="bottom" constant="18" id="gtd-Bh-aOp"/>
                             <constraint firstItem="y5p-Xf-moL" firstAttribute="top" secondItem="hWX-Im-euL" secondAttribute="bottom" constant="27" id="hd8-3f-SNd"/>
                             <constraint firstItem="44d-T0-16h" firstAttribute="trailing" secondItem="0Hr-dQ-dhm" secondAttribute="trailing" constant="109" id="iT2-le-7zm"/>
-                            <constraint firstItem="44d-T0-16h" firstAttribute="trailing" secondItem="mDl-xs-7us" secondAttribute="trailing" constant="110" id="jPb-yc-JoE"/>
                             <constraint firstItem="hWX-Im-euL" firstAttribute="leading" secondItem="44d-T0-16h" secondAttribute="leading" constant="52" id="luX-CO-Rbe"/>
-                            <constraint firstItem="g8Y-YV-jgx" firstAttribute="leading" secondItem="44d-T0-16h" secondAttribute="leading" id="nXe-Xs-oZf"/>
                             <constraint firstItem="44d-T0-16h" firstAttribute="trailing" secondItem="hWX-Im-euL" secondAttribute="trailing" constant="52" id="ouu-Po-dNT"/>
                             <constraint firstItem="9bV-ms-1RX" firstAttribute="top" secondItem="44d-T0-16h" secondAttribute="top" constant="23" id="t2g-1k-qLW"/>
-                            <constraint firstItem="hWX-Im-euL" firstAttribute="top" secondItem="0Hr-dQ-dhm" secondAttribute="bottom" constant="28" id="vKG-v7-dWJ"/>
+                            <constraint firstItem="hWX-Im-euL" firstAttribute="top" secondItem="0Hr-dQ-dhm" secondAttribute="bottom" constant="19" id="vKG-v7-dWJ"/>
                             <constraint firstItem="44d-T0-16h" firstAttribute="trailing" secondItem="v8u-nS-1fN" secondAttribute="trailing" constant="52" id="w5a-bn-BVQ"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="44d-T0-16h"/>
@@ -211,7 +219,6 @@
     <resources>
         <image name="MomentoLogo" width="500" height="500"/>
         <image name="first" width="30" height="30"/>
-        <image name="overlay" width="750" height="1624"/>
         <image name="second" width="30" height="30"/>
     </resources>
 </document>
