--- a/Momento/View/Base.lproj/Main.storyboard
+++ b/Momento/View/Base.lproj/Main.storyboard
@@ -467,11 +467,11 @@
             <objects>
                 <viewController id="eJB-hj-gUe" customClass="Onboard2ViewController" customModule="Momento" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="0Rp-qX-rmL">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="1000"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4i3-E7-rtJ">
-                                <rect key="frame" x="75" y="738" width="264" height="50"/>
+                                <rect key="frame" x="75" y="842" width="264" height="50"/>
                                 <color key="backgroundColor" red="0.98039215690000003" green="0.63529411759999999" blue="0.1176470588" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="uZs-tJ-ibJ"/>
@@ -493,11 +493,34 @@
                                 <color key="textColor" red="0.95686274510000002" green="0.95686274510000002" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Pf1-k4-DB9">
+                                <rect key="frame" x="0.0" y="151" width="414" height="683"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KZt-zT-iS5">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="1000"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="1000" id="fTq-eE-kr2"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="KZt-zT-iS5" firstAttribute="leading" secondItem="Pf1-k4-DB9" secondAttribute="leading" id="NK0-z9-qX4"/>
+                                    <constraint firstAttribute="bottom" secondItem="KZt-zT-iS5" secondAttribute="bottom" id="cNw-31-EzI"/>
+                                    <constraint firstAttribute="trailing" secondItem="KZt-zT-iS5" secondAttribute="trailing" id="fax-9e-AcL"/>
+                                    <constraint firstItem="KZt-zT-iS5" firstAttribute="top" secondItem="Pf1-k4-DB9" secondAttribute="top" id="gNg-3S-QtI"/>
+                                </constraints>
+                            </scrollView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="Lvs-KZ-kMH" firstAttribute="bottom" secondItem="4i3-E7-rtJ" secondAttribute="bottom" constant="25" id="0gb-3r-ZNj"/>
+                            <constraint firstItem="4i3-E7-rtJ" firstAttribute="top" secondItem="Pf1-k4-DB9" secondAttribute="bottom" constant="8" id="4GA-9F-COv"/>
+                            <constraint firstItem="Pf1-k4-DB9" firstAttribute="top" secondItem="8vz-ye-hCT" secondAttribute="bottom" constant="8" id="C8c-fe-lPd"/>
                             <constraint firstItem="Lvs-KZ-kMH" firstAttribute="trailing" secondItem="4i3-E7-rtJ" secondAttribute="trailing" constant="75" id="Dih-Qs-EdI"/>
+                            <constraint firstItem="KZt-zT-iS5" firstAttribute="width" secondItem="0Rp-qX-rmL" secondAttribute="width" id="Jz3-hq-pcM"/>
+                            <constraint firstItem="Pf1-k4-DB9" firstAttribute="leading" secondItem="Lvs-KZ-kMH" secondAttribute="leading" id="MNV-cg-tK1"/>
+                            <constraint firstItem="Pf1-k4-DB9" firstAttribute="trailing" secondItem="Lvs-KZ-kMH" secondAttribute="trailing" id="RDM-HQ-qgU"/>
                             <constraint firstItem="8vz-ye-hCT" firstAttribute="top" secondItem="Lvs-KZ-kMH" secondAttribute="top" constant="5" id="YBc-ee-ygZ"/>
                             <constraint firstItem="4i3-E7-rtJ" firstAttribute="leading" secondItem="Lvs-KZ-kMH" secondAttribute="leading" constant="75" id="fth-ES-Rau"/>
                             <constraint firstItem="8vz-ye-hCT" firstAttribute="trailing" secondItem="0Rp-qX-rmL" secondAttribute="trailingMargin" id="ndO-ey-Hh4"/>
@@ -505,13 +528,14 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Lvs-KZ-kMH"/>
                     </view>
+                    <size key="freeformSize" width="414" height="1000"/>
                     <connections>
                         <outlet property="signupBtnSetup" destination="4i3-E7-rtJ" id="vne-h0-JY7"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="prl-Ok-dBb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2218.840579710145" y="2139.5089285714284"/>
+            <point key="canvasLocation" x="2222" y="2168"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="yl2-sM-qoP">
